# InfiniTUI

./: .gitignore  Cargo.toml  Justfile  README.md  config.template.toml  prompt.template.toml
locales/: en.yml  zh-CN.yml
src/: app.rs  config.rs  lib.rs  main.rs
src/event/: handler.rs  mod.rs
src/llm/: chatgpt.rs  infinilm.rs  mod.rs  ollama.rs
src/llm/chatglm/: api_operation.rs  custom_jwt.rs  mod.rs
src/ui/: chat.rs  help.rs  history.rs  mod.rs  notification.rs  prompt.rs  spinner.rs  tui.rs
src/ui/file_explore/: input.rs  mod.rs  widget.rs
src/utils/: code2prompt.rs  mod.rs
