[package]
name = "infini"
version = "0.1.0"
edition = "2021"
authors = ["AlexZhang"]

[dependencies]
# TUI
derivative = "2.2"
ratatui = { version = "0.27", features = [
    "all-widgets",
    "unstable-widget-ref",
] }
ansi-to-tui = "3"
arboard = "3"
tui-textarea = { version = "0.4" }
unicode-width = "0.1"
crossterm = { version = "0.27", features = ["event-stream"] }

# HTTP
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# Util
regex = "1"
dirs = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8" }
clap = { version = "4", features = ["derive", "cargo"] }
bat = "0.24"
strum = "0.26"
strum_macros = "0.26"
serde_yaml = "0.9.34"
chrono = "0.4.33"
hmac = "0.12.1"
sha2 = "0.10.8"
base64url = "0.1.0"
rsntp = "4.0.0"
once_cell = "1.19.0"
lazy_static = "1.4.0"
# async rust
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = { version = "0.3.30", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2"
anyhow = "1.0.81"
async-openai = "0.20.0"
dotenv = "0.15.0"
termtree = "0.4.1"
git2 = "0.18.3"
inquire = "0.7.4"
ignore = "0.4.22"
tiktoken-rs = "0.5.8"
handlebars = "5.1.2"
